--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "prettier": "^3.5.3"
   },
   "dependencies": {
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.15.2"
   }
