--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prettier": "^3.5.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
