--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,4 @@
 PORT=3001
+ORIGIN=https://vidtube.com
+DB_NAME=vidtube
+MONGODB_URI=mongodb+srv://sseleimend:<db_password>@cluster0.tlskeqb.mongodb.net
