--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "http-status-codes": "^2.3.0",
     "mongoose": "^8.15.2"
   }
 }
