--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
-    "mongoose": "^8.15.2"
+    "mongoose": "^8.15.2",
+    "mongoose-aggregate-paginate-v2": "^1.1.4"
   }
 }
