--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "prettier": "^3.5.3"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.2",
     "mongoose-aggregate-paginate-v2": "^1.1.4"
   }
