Add JWT configuration and token generation methods to User model

--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,7 @@ PORT=3001
 ORIGIN=https://vidtube.com
 DB_NAME=vidtube
 MONGODB_URI=mongodb+srv://sseleimend:<db_password>@cluster0.tlskeqb.mongodb.net
+JWT_SECRET=yoursecret
+JWT_ACCESS_TTL=1d
+JWT_REFRESH_SECRET=yoursecret
+JWT_REFRESH_ACCESS_TTL=10d
