Add Cloudinary integration for file uploads and update environment variables

--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,6 @@ JWT_SECRET=yoursecret
 JWT_ACCESS_TTL=1d
 JWT_REFRESH_SECRET=yoursecret
 JWT_REFRESH_ACCESS_TTL=10d
+CLOUDINARY_CLOUD_NAME=seleimend
+CLOUDINARY_API_KEY=yourapikey
+CLOUDINARY_API_SECRET=yourapisecret
