--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
 PORT=3001
 ORIGIN=https://vidtube.com
 DB_NAME=vidtube
-MONGODB_URI=mongodb+srv://sseleimend:<db_password>@cluster0.tlskeqb.mongodb.net
+MONGODB_URI=mongodb+srv://sseleimend:<db-password>@vidtube-cluster0.94aggs0.mongodb.net
 JWT_SECRET=yoursecret
 JWT_ACCESS_TTL=1d
 JWT_REFRESH_SECRET=yoursecret
